--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,24 +5,31 @@ body {
   header{
     height: 50vh;
     width: 100%;
+    position: relative;
+    top: 0;
   }
   header h1{
-    top:-25rem;
+    height: auto;
+    width: 100%;
+    top: 0;
     position: relative;
     color: rgb(36, 36, 36);
-    font-size: 100px;
+    font-weight: 100;
+    text-align: center;
+    font-size:xxx-large;
     font-family: 'Times New Roman', Times, serif;
   }
   header img{
-    position: relative;
-    width: 100%;
+    position: absolute;
+    width:100%;
     height: 100%;
+    top: 0;
   }
   
   nav {
     background-color: #c0ccec;
     width: 15em;
-    height: 15rem;
+    height: 0rem;
     text-align: center;
     position: absolute;
     right: 70rem;
@@ -44,7 +51,7 @@ nav a{
     box-shadow: 1px 1px 10px 1px #000000;
     background-color: #d7e0fa;
   }
-  h2{
+  .title{
     width: 100%;
     height: 50px;
     position: absolute;
@@ -60,4 +67,20 @@ nav a{
   }
   
   
-  
+  .info{
+    margin-left:20%;
+    top: -15rem;
+    position: relative;
+  }
+  .nav-extra{
+    position: absolute;
+    top: 10rem;
+    background-color: #c0ccec;
+    width: 15em;
+    height: auto;
+  }
+  table{
+    width: 130vh;
+    height: auto;
+  }
+
